Implemented ByteArray*Stream