@@ -1,34 +1,49 @@
 package gwtjava.net;
 
 public class URI {
-
-    private String uri;
+    private java.net.URI uri;
     public URI(String uri) throws URISyntaxException {
+        try {
+            this.uri = new java.net.URI(uri);
+        } catch (java.net.URISyntaxException e) {
+            throw new URISyntaxException(e.getMessage());
+        }
+    }
+
+    public URI(String scheme, String ssp, String fragment) throws URISyntaxException {
+        try {
+            this.uri = new java.net.URI(scheme, ssp, fragment);
+        } catch (java.net.URISyntaxException e) {
+            throw new URISyntaxException(e.getMessage());
+        }
+    }
+
+    private URI(java.net.URI uri) {
         this.uri = uri;
     }
 
-    public URI(String object, String string, String object2) throws URISyntaxException {
-        throw new UnsupportedOperationException();
-    }
-
     public boolean isAbsolute() {
-        return uri.startsWith("file:/");
+        return uri.isAbsolute();
     }
 
     public URI normalize() {
-        throw new UnsupportedOperationException();
+        return new URI(uri.normalize());
     }
 
     public String getPath() {
-        throw new UnsupportedOperationException();
+        return uri.getPath();
     }
 
     public URL toURL() throws MalformedURLException {
-        return new URL(uri);
+        try {
+            return new URL(uri.toURL());
+        } catch (java.net.MalformedURLException e) {
+            throw new MalformedURLException(e.getMessage());
+        }
     }
 
     public String getSchemeSpecificPart() {
-        throw new UnsupportedOperationException();
+        return uri.getSchemeSpecificPart();
     }
 
 }
